<resources>
    <string name="app_name">MovieQueue</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MovieQueue</string>
    <string name="nav_header_subtitle">User details</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>

    <string name="action_add_movie">Add movie</string>
    <string name="add_movie_category">Category</string>
    <string name="add_movie_movie_name">Movie name</string>
    <string name="add_movie_user_rate">User Rate</string>
    <string name="add_movie_note">Note</string>
    <string name="movie_added_successfully">Movie added successfully</string>
    <string name="error_try_again">Error try again</string>
    <string name="add_movie_fragment">Add Movie</string>

</resources>