<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.store.movie.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_add_movie_button"
            app:destination="@id/add_movie_button" />
    </fragment>

    <fragment
        android:id="@+id/add_movie_button"
        android:name="com.store.movie.ui.home.add.AddMovieFragment"
        android:label="@string/add_movie_fragment"
        tools:layout="@layout/fragment_add_movie" />


    <fragment
        android:id="@+id/nav_category"
        android:name="com.store.movie.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />
</navigation>